Added sorting logic on DB queries